--- a/exp_reproduction.ipynb
+++ b/exp_reproduction.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Jan  5 17:25:21 2024       \n",
+      "Wed Jan 10 18:44:38 2024       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 470.161.03   Driver Version: 470.161.03   CUDA Version: 11.4     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -17,8 +17,20 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  NVIDIA A40          On   | 00000000:D8:00.0 Off |                    0 |\n",
-      "|  0%   30C    P8    28W / 300W |      0MiB / 45634MiB |      0%      Default |\n",
+      "|   0  Tesla T4            On   | 00000000:07:00.0 Off |                    0 |\n",
+      "| N/A   36C    P8    15W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  Tesla T4            On   | 00000000:2F:00.0 Off |                    0 |\n",
+      "| N/A   34C    P8    15W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  Tesla T4            On   | 00000000:30:00.0 Off |                    0 |\n",
+      "| N/A   34C    P8    15W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   3  Tesla T4            On   | 00000000:86:00.0 Off |                    0 |\n",
+      "| N/A   34C    P8    15W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -858,6 +870,585 @@
     "    L = 2,\n",
     "    total_epochs = 300,\n",
     "    lambda_P=40e-3,\n",
+    "    lambda_PM=0,\n",
+    "    lambda_MSE=1,\n",
+    "    skip_fq=5,\n",
+    "    pre_path = pre_path\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Settings:  dim_128|z_dim_1|L_2|_single_bitFalse|lambda_gp_10|bs_64|dpenalty_0|lambdaP_0.01|lambdaPM_0|lambdaMSE_1\n",
+      "[-1.0, 1.0]\n",
+      "Using pretrained weights!\n",
+      "Finished Loading MNIST!\n",
+      "0\n",
+      "Epoch: 0l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.4563), tensor(0.5039), tensor(0.0127))\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "Epoch: 10l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6831), tensor(0.6283), tensor(0.0138))\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "Epoch: 20l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5845), tensor(0.4592), tensor(0.0137))\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "Epoch: 30l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5507), tensor(0.4357), tensor(0.0136))\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "Epoch: 40l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6212), tensor(0.4887), tensor(0.0140))\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "Epoch: 50l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6426), tensor(0.4713), tensor(0.0141))\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "Epoch: 60l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5298), tensor(0.4576), tensor(0.0140))\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "Epoch: 70l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5938), tensor(0.4617), tensor(0.0141))\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "Epoch: 80l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6252), tensor(0.4646), tensor(0.0143))\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "Epoch: 90l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6783), tensor(0.4694), tensor(0.0142))\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "Epoch: 100l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5949), tensor(0.4742), tensor(0.0143))\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "Epoch: 110l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5845), tensor(0.4812), tensor(0.0142))\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "Epoch: 120l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5840), tensor(0.4630), tensor(0.0142))\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "Epoch: 130l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.7447), tensor(0.4843), tensor(0.0144))\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "Epoch: 140l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5966), tensor(0.4742), tensor(0.0144))\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "Epoch: 150l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6116), tensor(0.5043), tensor(0.0142))\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "Epoch: 160l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6543), tensor(0.4597), tensor(0.0141))\n",
+      "161\n",
+      "162\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n",
+      "169\n",
+      "170\n",
+      "Epoch: 170l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6408), tensor(0.4813), tensor(0.0141))\n",
+      "171\n",
+      "172\n",
+      "173\n",
+      "174\n",
+      "175\n",
+      "176\n",
+      "177\n",
+      "178\n",
+      "179\n",
+      "180\n",
+      "Epoch: 180l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6225), tensor(0.4836), tensor(0.0142))\n",
+      "181\n",
+      "182\n",
+      "183\n",
+      "184\n",
+      "185\n",
+      "186\n",
+      "187\n",
+      "188\n",
+      "189\n",
+      "190\n",
+      "Epoch: 190l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6045), tensor(0.4902), tensor(0.0142))\n",
+      "191\n",
+      "192\n",
+      "193\n",
+      "194\n",
+      "195\n",
+      "196\n",
+      "197\n",
+      "198\n",
+      "199\n",
+      "200\n",
+      "Epoch: 200l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5863), tensor(0.4824), tensor(0.0141))\n",
+      "201\n",
+      "202\n",
+      "203\n",
+      "204\n",
+      "205\n",
+      "206\n",
+      "207\n",
+      "208\n",
+      "209\n",
+      "210\n",
+      "Epoch: 210l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5777), tensor(0.4940), tensor(0.0144))\n",
+      "211\n",
+      "212\n",
+      "213\n",
+      "214\n",
+      "215\n",
+      "216\n",
+      "217\n",
+      "218\n",
+      "219\n",
+      "220\n",
+      "Epoch: 220l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6022), tensor(0.5261), tensor(0.0142))\n",
+      "221\n",
+      "222\n",
+      "223\n",
+      "224\n",
+      "225\n",
+      "226\n",
+      "227\n",
+      "228\n",
+      "229\n",
+      "230\n",
+      "Epoch: 230l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5774), tensor(0.4768), tensor(0.0143))\n",
+      "231\n",
+      "232\n",
+      "233\n",
+      "234\n",
+      "235\n",
+      "236\n",
+      "237\n",
+      "238\n",
+      "239\n",
+      "240\n",
+      "Epoch: 240l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6231), tensor(0.4963), tensor(0.0140))\n",
+      "241\n",
+      "242\n",
+      "243\n",
+      "244\n",
+      "245\n",
+      "246\n",
+      "247\n",
+      "248\n",
+      "249\n",
+      "250\n",
+      "Epoch: 250l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6000), tensor(0.4718), tensor(0.0141))\n",
+      "251\n",
+      "252\n",
+      "253\n",
+      "254\n",
+      "255\n",
+      "256\n",
+      "257\n",
+      "258\n",
+      "259\n",
+      "260\n",
+      "Epoch: 260l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5542), tensor(0.4994), tensor(0.0139))\n",
+      "261\n",
+      "262\n",
+      "263\n",
+      "264\n",
+      "265\n",
+      "266\n",
+      "267\n",
+      "268\n",
+      "269\n",
+      "270\n",
+      "Epoch: 270l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6271), tensor(0.4989), tensor(0.0141))\n",
+      "271\n",
+      "272\n",
+      "273\n",
+      "274\n",
+      "275\n",
+      "276\n",
+      "277\n",
+      "278\n",
+      "279\n",
+      "280\n",
+      "Epoch: 280l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5630), tensor(0.4581), tensor(0.0140))\n",
+      "281\n",
+      "282\n",
+      "283\n",
+      "284\n",
+      "285\n",
+      "286\n",
+      "287\n",
+      "288\n",
+      "289\n",
+      "290\n",
+      "Epoch: 290l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.6416), tensor(0.5217), tensor(0.0142))\n",
+      "291\n",
+      "292\n",
+      "293\n",
+      "294\n",
+      "295\n",
+      "296\n",
+      "297\n",
+      "298\n",
+      "299\n",
+      "Epoch: 299l_PM, l_P, l_MSE, d_penalty 00.01 1 0 P loss: (tensor(0.5657), tensor(0.5006), tensor(0.0140))\n"
+     ]
+    }
+   ],
+   "source": [
+    "pre_path = './saved_models/dim_128|z_dim_1|L_2|_single_bitFalse|lambda_gp_10|bs_64|dpenalty_0|lambdaP_0|lambdaPM_0|lambdaMSE_1'\n",
+    "main(\n",
+    "    z_dim = 1,\n",
+    "    L = 2,\n",
+    "    total_epochs = 300,\n",
+    "    lambda_P=10e-3,\n",
+    "    lambda_PM=0,\n",
+    "    lambda_MSE=1,\n",
+    "    skip_fq=5,\n",
+    "    pre_path = pre_path\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Settings:  dim_128|z_dim_1|L_2|_single_bitFalse|lambda_gp_10|bs_64|dpenalty_0|lambdaP_0.08|lambdaPM_0|lambdaMSE_1\n",
+      "[-1.0, 1.0]\n",
+      "Using pretrained weights!\n",
+      "Finished Loading MNIST!\n",
+      "0\n",
+      "Epoch: 0l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.3894), tensor(0.3370), tensor(0.0148))\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "Epoch: 10l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.4961), tensor(0.3996), tensor(0.0156))\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "Epoch: 20l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5457), tensor(0.3891), tensor(0.0157))\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "Epoch: 30l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5437), tensor(0.3999), tensor(0.0159))\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "Epoch: 40l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.4756), tensor(0.3137), tensor(0.0155))\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "Epoch: 50l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5347), tensor(0.3991), tensor(0.0156))\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "Epoch: 60l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5858), tensor(0.4237), tensor(0.0155))\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "Epoch: 70l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.4879), tensor(0.4335), tensor(0.0154))\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "Epoch: 80l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5713), tensor(0.4107), tensor(0.0157))\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "Epoch: 90l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5685), tensor(0.3984), tensor(0.0155))\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "Epoch: 100l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5694), tensor(0.4313), tensor(0.0155))\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "Epoch: 110l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5505), tensor(0.4039), tensor(0.0156))\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "Epoch: 120l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5690), tensor(0.4012), tensor(0.0158))\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "Epoch: 130l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.6505), tensor(0.3951), tensor(0.0157))\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "Epoch: 140l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.6109), tensor(0.3928), tensor(0.0156))\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "Epoch: 150l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.5898), tensor(0.3968), tensor(0.0162))\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "Epoch: 160l_PM, l_P, l_MSE, d_penalty 00.08 1 0 P loss: (tensor(0.6181), tensor(0.3817), tensor(0.0159))\n",
+      "161\n",
+      "162\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n",
+      "169\n",
+      "170\n"
+     ]
+    }
+   ],
+   "source": [
+    "pre_path = './saved_models/dim_128|z_dim_1|L_2|_single_bitFalse|lambda_gp_10|bs_64|dpenalty_0|lambdaP_0|lambdaPM_0|lambdaMSE_1'\n",
+    "main(\n",
+    "    z_dim = 1,\n",
+    "    L = 2,\n",
+    "    total_epochs = 300,\n",
+    "    lambda_P=80e-3,\n",
     "    lambda_PM=0,\n",
     "    lambda_MSE=1,\n",
     "    skip_fq=5,\n",
